--- a/css/style.css
+++ b/css/style.css
@@ -508,10 +508,14 @@ a {
     flex-shrink: 0
 }
 #scheme-Paradox .material-layout .material-layout__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     position: relative;
     padding-top: 165px;
     margin: 0 auto;
     width: 100%;
+    height: 100%;
 }
 @media screen and (max-width: 480px) {
     #scheme-Paradox .material-layout .material-layout__content {
